# cersei

./: .gitignore  CHANGELOG.md  Cargo.toml  sync_cargo.sh
bench/term-bench/: abstract_tbench.py  run_dry_tb.sh  run_tb_agentrl.sh  run_tb_cersei.sh  run_tb_full.sh  tbench_agent.py
crates/abstract-cli/: Cargo.toml
crates/abstract-cli/src/: agentrl_run.rs  app.rs  main.rs  render.rs  repl.rs
crates/abstract-cli/src/tui/: event_loop.rs
crates/abstract-cli/src/tui/widgets/: graph.rs  input.rs  messages.rs
crates/cersei/: Cargo.toml
crates/cersei-agent/: Cargo.toml
crates/cersei-agent/src/: lib.rs  runner.rs
crates/cersei-agentlang/: Cargo.toml
crates/cersei-agentlang/src/: ast.rs  builtins.rs  error.rs  interp.rs  lexer.rs  lib.rs  parser.rs  registry.rs  run_tool.rs  spec.rs
crates/cersei-agentlang/tests/: e2e.rs  eval.rs  parser.rs
crates/cersei-agentrl/: Cargo.toml  gcd.py
crates/cersei-agentrl/src/: graph.rs  graph_reporter.rs  lib.rs  memory_bridge.rs  orchestrator.rs  planner.rs  runner.rs  scrub.rs  verify.rs
crates/cersei-agentrl/src/registry/: dynamic_tool.rs  mod.rs
crates/cersei-agentrl/tests/: live_gemini.rs  rl_loop.rs
crates/cersei-compression/src/: dispatch.rs  lib.rs
crates/cersei-embeddings/: Cargo.toml
crates/cersei-hooks/: Cargo.toml
crates/cersei-lsp/: Cargo.toml
crates/cersei-mcp/: Cargo.toml
crates/cersei-memory/: Cargo.toml
crates/cersei-provider/: Cargo.toml
crates/cersei-provider/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  registry.rs  router.rs
crates/cersei-skills/: Cargo.toml
crates/cersei-tbench/: Cargo.toml
crates/cersei-tbench/src/: main.rs  prompt.rs
crates/cersei-tools/: Cargo.toml
crates/cersei-tools-derive/: Cargo.toml
crates/cersei-tools/src/: bash.rs  file_edit.rs  grep_tool.rs  lib.rs  multi_edit.rs  vm_tools.rs
crates/cersei-tools/src/tool_primitives/: bash_safety.rs  code_intel.rs  fs.rs  mod.rs  replace.rs  search.rs
crates/cersei-types/: Cargo.toml
crates/cersei-types/src/: lib.rs  media.rs
crates/cersei-vms/: Cargo.toml
crates/cersei-vms/docker/: Dockerfile
crates/cersei-vms/src/: commands.rs  error.rs  filesystem.rs  lib.rs  runtime.rs  snapshot.rs  types.rs
crates/cersei-vms/src/backends/: docker.rs  local.rs  mod.rs
crates/cersei-vms/src/envd/: handlers.rs  mod.rs  protocol.rs
crates/cersei-vms/src/primitives/: kv.rs  mailbox.rs  mod.rs  volume.rs
crates/cersei-vms/tests/: kv_concurrent.rs  local_backend.rs  mailbox.rs
crates/cersei-workflows/: Cargo.toml
crates/cersei-workflows/src/: builder.rs  compile.rs  condition.rs  events.rs  executor.rs  ir.rs  lib.rs  registry.rs  result.rs  step.rs  store.rs
crates/cersei-workflows/src/steps/: agent_step.rs  fn_step.rs  mod.rs  tool_step.rs  workflow_step.rs
crates/cersei-workflows/tests/: workflows.rs
crates/cersei/examples/: gemini_vision_test.rs  multimodal.rs
crates/cersei/src/: lib.rs
docs/: atlas-edit-tool-migration.md  package.json
docs/content/docs/: agentrl-api.mdx  agentrl-cookbook.mdx  agentrl-overview.mdx  agentrl-template.mdx  api-types.mdx  changelog.mdx  crate-map.mdx  index.mdx  installation.mdx  meta.json  multimodal.mdx  providers.mdx  vms-api.mdx  vms-cookbook.mdx  vms-overview.mdx  workflows-api.mdx  workflows-cookbook.mdx  workflows-overview.mdx
docs/lib/: layout.shared.tsx
