[workspace]
resolver = "2"
exclude = ["examples/benchmark"]
members = [
    "crates/cersei",
    "crates/cersei-types",
    "crates/cersei-provider",
    "crates/cersei-tools",
    "crates/cersei-tools-derive",
    "crates/cersei-agent",
    "crates/cersei-memory",
    "crates/cersei-hooks",
    "crates/cersei-mcp",
    "crates/cersei-lsp",
    "crates/cersei-embeddings",
    "crates/cersei-compression",
    "crates/cersei-skills",
    "crates/cersei-vms",
    "crates/cersei-agentlang",
    "crates/cersei-agentrl",
    "crates/cersei-tbench",
    "crates/abstract-cli",
    "bench/long-mem",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Adib Mohsin"]
license = "MIT"
description = "A modular Rust SDK for building coding agents"
repository = "https://github.com/pacifio/cersei"
homepage = "https://github.com/pacifio/cersei"
keywords = ["ai", "agent", "coding", "llm", "tools"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
# NOTE: `hickory-dns` gives reqwest a pure-Rust DNS resolver. Required for fully
# static musl binaries — the default getaddrinfo resolver fails (no NSS) in a
# static musl build, which silently breaks every outbound API call.
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "rustls-tls-webpki-roots", "hickory-dns"], default-features = false }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
url = "2"

# Text processing
similar = "2"
unicode-width = "0.2"

# HTML processing
html2text = "0.12"

# Process execution
nix = { version = "0.29", features = ["process", "signal", "user"] }

# JSON Schema
schemars = { version = "0.8", features = ["derive"] }

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Workspace crates
cersei = { path = "crates/cersei", version = "0.2.0" }
cersei-types = { path = "crates/cersei-types", version = "0.2.0" }
cersei-provider = { path = "crates/cersei-provider", version = "0.2.0" }
cersei-tools = { path = "crates/cersei-tools", version = "0.2.0" }
cersei-tools-derive = { path = "crates/cersei-tools-derive", version = "0.2.0" }
cersei-agent = { path = "crates/cersei-agent", version = "0.2.0" }
cersei-memory = { path = "crates/cersei-memory", version = "0.2.0" }
cersei-hooks = { path = "crates/cersei-hooks", version = "0.2.0" }
cersei-mcp = { path = "crates/cersei-mcp", version = "0.2.0" }
cersei-lsp = { path = "crates/cersei-lsp", version = "0.2.0" }
cersei-embeddings = { path = "crates/cersei-embeddings", version = "0.2.0" }
cersei-compression = { path = "crates/cersei-compression", version = "0.2.0" }
cersei-skills = { path = "crates/cersei-skills", version = "0.2.0" }
cersei-vms = { path = "crates/cersei-vms", version = "0.2.0" }
cersei-agentlang = { path = "crates/cersei-agentlang", version = "0.2.0" }
cersei-agentrl = { path = "crates/cersei-agentrl", version = "0.2.0" }

# Google Cloud auth (service-account → self-refreshing OAuth tokens for Vertex).
# rustls only — keeps the static-musl build OpenSSL-free.
gcp_auth = { version = "0.12", features = ["webpki-roots"] }

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
