[package]
name = "cersei-agentlang"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AgentTemplate — a small functional DSL executed on top of the Cersei runtime"
repository.workspace = true
homepage.workspace = true

[dependencies]
cersei-types = { workspace = true }
cersei-tools = { workspace = true }
cersei-vms = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
