[package]
name = "cersei-agentrl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AgentRL — self-evolving orchestration (ExecutionGraph, PlannerAgent, dynamic tool registry) for Cersei"
repository.workspace = true
homepage.workspace = true

[dependencies]
cersei-types = { workspace = true }
cersei-provider = { workspace = true }
cersei-tools = { workspace = true }
cersei-agent = { workspace = true }
cersei-memory = { workspace = true }
cersei-embeddings = { workspace = true }
cersei-vms = { workspace = true }
cersei-compression = { workspace = true }
cersei-agentlang = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
