[package]
name = "cersei-tbench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A purpose-built Terminal-Bench coding agent on the Cersei SDK + AgentRL"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "tbench-agent"
path = "src/main.rs"

[dependencies]
cersei-agentrl = { workspace = true }
cersei-provider = { workspace = true }
cersei-tools = { workspace = true }
cersei-types = { workspace = true }
cersei-compression = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
