[package]
name = "cersei-workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cersei workflows: a serializable, UI-buildable workflow engine for the Cersei SDK"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cersei-types = { workspace = true }
cersei-tools = { workspace = true }
cersei-agent = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
